@@ -1,4 +1,4 @@
-[ogg]                                   # avconv options
+[ogg_int]                                   # avconv options
 insane  = -vn -ac 2 -acodec libvorbis -q 10
 extreme = -vn -ac 2 -acodec libvorbis -q 8
 high    = -vn -ac 2 -acodec libvorbis -q 6
@@ -7,7 +7,7 @@ low     = -vn -ac 2 -acodec libvorbis -q 1
 tiny    = -vn -ac 1 -acodec libvorbis -q 0 -ar 32000
 
 
-[mp3]                                   # avconv options
+[mp3_int]                                   # avconv options
 insane  = -vn -ac 2 -acodec libmp3lame -ab 320k
 extreme = -vn -ac 2 -acodec libmp3lame -aq 0
 high    = -vn -ac 2 -acodec libmp3lame -aq 2
@@ -16,7 +16,7 @@ low     = -vn -ac 2 -acodec libmp3lame -aq 9
 tiny    = -vn -ac 1 -acodec libmp3lame -ab 32k -ar 32000
 
 
-[m4a]                                   # avconv options
+[m4a_int]                                   # avconv options
 insane  = -vn -ac 2 -acodec libfaac -aq 250
 extreme = -vn -ac 2 -acodec libfaac -aq 220
 high    = -vn -ac 2 -acodec libfaac -aq 170
@@ -25,7 +25,7 @@ low     = -vn -ac 2 -acodec libfaac -aq 50
 tiny    = -vn -ac 1 -acodec libfaac -aq 30 -ar 32000
 
 
-[wma]                                   # avconv options
+[wma_int]                                   # avconv options
 insane  = -vn -ab 320k -ac 2 -acodec wmav2
 extreme = -vn -ab 256k -ac 2 -acodec wmav2
 high    = -vn -ab 192k -ac 2 -acodec wmav2
@@ -33,7 +33,7 @@ normal  = -vn -ab 128k -ac 2 -acodec wmav2
 low     = -vn -ab 64k  -ac 2 -acodec wmav2
 tiny    = -vn -ab 32k  -ac 1 -acodec wmav2 -ar 32000
 
-[flac]                                  # avconv options
+[flac_int]                                  # avconv options
 insane  = -vn -acodec flac -compression_level 10
 extreme = -vn -acodec flac -compression_level 8
 high    = -vn -acodec flac -compression_level 7
@@ -41,7 +41,7 @@ normal  = -vn -acodec flac -compression_level 5
 low     = -vn -acodec flac -compression_level 3
 tiny    = -vn -acodec flac -compression_level 1
 
-[mpc]                                   # mppenc options
+[mpc_ext]                                   # mppenc options
 insane  = --overwrite --braindead
 extreme = --overwrite --insane
 high    = --overwrite --extreme
@@ -50,10 +50,43 @@ low     = --overwrite --telephone
 tiny    = --overwrite --quality 1.00
 
 
-[wv]                                    # wavpack options
+[wv_ext]                                    # wavpack options
 insane  = -i -y -hh
 extreme = -i -y -hh
 high    = -i -y -h
 normal  = -i -y
 low     = -i -y -f
 tiny    = -i -y -f
+
+
+[ogg_ext]                                   # oggenc options
+insane  = -q 10
+extreme = -q 8
+high    = -q 6
+normal  = -q 3
+low     = -q 1
+tiny    = -q -1
+
+[mp3_ext]                                   # lame options
+insane  = --cbr -b 320
+extreme = -V 0
+high    = -V 2
+normal  = -V 4
+low     = --preset 64
+tiny    = --cbr -b 32 -m m -s 32
+
+[flac_ext]                                  # flac options
+insane  = --best
+extreme = -7
+high    = -6
+normal  = -5
+low     = -3
+tiny    = --fast
+
+[m4a_ext]                                   # faac options
+insane  = -w -q 500
+extreme = -w -q 350
+high    = -w -q 200
+normal  = -w
+low     = -w -q 50
+tiny    = -w -q 10
